--- a/variables/package.json
+++ b/variables/package.json
@@ -8,6 +8,7 @@
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-scripts": "^4.0.1"
   },
   "scripts": {
