--- a/variables/package.json
+++ b/variables/package.json
@@ -9,7 +9,8 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "audit": "npm audit fix",
@@ -44,5 +45,8 @@
       "build/index.html",
       "build/**/*"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.3"
   }
 }
