--- a/variables/package.json
+++ b/variables/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "blockly": "^3.20200924.4",
     "electron": "^12.0.5",
+    "html-react-parser": "^1.2.8",
+    "mathml": "^1.1.12",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
