--- a/variables/package.json
+++ b/variables/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "audit": "npm audit fix",
