--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.4",
     "blockly": "^3.20200924.4",
     "electron": "^12.0.5",
     "html-react-parser": "^1.2.8",
