--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "electron": "^12.0.5",
     "html-react-parser": "^1.2.8",
     "mathml": "^1.1.12",
+    "node-blockly": "^1.2.8",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
