--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.4",
     "blockly": "^3.20200924.4",
     "electron": "^12.0.5",
+    "glpk.js": "^4.0.0",
     "html-react-parser": "^1.2.8",
     "mathml": "^1.1.12",
     "node-blockly": "^1.2.8",
