--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "blockly": "^3.20200924.4",
+    "clp-wasm": "0.0.16",
     "electron": "^12.0.5",
     "glpk.js": "^4.0.0",
     "html-react-parser": "^1.2.8",
@@ -24,7 +25,7 @@
     "update": "npm update",
     "postinstall": "cp -r node_modules/blockly/media public/media",
     "predeploy": "npm run build",
-    "start": "set BROWSER=none && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.3"
+    "@types/react-dom": "^17.0.3",
+    "react-app-rewired": "^2.1.8",
+    "wasm-loader": "^1.3.0"
   }
 }
