--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "blockly": "^3.20200924.4",
-    "clp-wasm": "0.0.16",
     "electron": "^12.0.5",
-    "glpk.js": "^4.0.0",
     "html-react-parser": "^1.2.8",
     "mathml": "^1.1.12",
     "node-blockly": "^1.2.8",
@@ -16,9 +14,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.1",
-    "simple-simplex": "^1.0.1",
-    "typescript": "^4.2.4",
-    "xlsx": "^0.17.0"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "audit": "npm audit fix",
